--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
         <item>Calendario</item>
         <item>Cursos</item>
         <item>Deportes</item>
-        <item>Buses</item>
+        <!--<item>Buses</item>-->
         <item>FAQ Y REGLAMENTOS</item>
         <item>CONFIGURACIÓN</item>
         <item>CERRAR SESIÓN</item>
